adding Junit and some tests

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,21 @@
 <artifactId>JeuMines</artifactId>
 <version>0.0.1-SNAPSHOT</version>
 
-
+    <dependencies>
+        <!-- Other dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 <build>
 <sourceDirectory>src</sourceDirectory>
 <resources>
@@ -37,4 +51,5 @@
 <maven.compiler.source>17</maven.compiler.source>
 <maven.compiler.target>17</maven.compiler.target>
 </properties>
+
         </project>
